# pypi-release

./: README.md  pyproject.toml
pypi_release/: __main__.py
